[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/Theme.tres" type="Theme" id=1]
[ext_resource path="res://Resources/8-bit Arcade In.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://GUI/StartMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_top = 15.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "The Space Chronicles"
align = 1
valign = 1

[node name="MainMenu" type="VBoxContainer" parent="."]
margin_left = 31.0
margin_top = 71.0
margin_right = 71.0
margin_bottom = 130.0

[node name="StartBtn" type="Button" parent="MainMenu"]
margin_right = 72.0
margin_bottom = 17.0
text = "Start"

[node name="SettingsBtn" type="Button" parent="MainMenu"]
margin_top = 21.0
margin_right = 72.0
margin_bottom = 38.0
text = "Settings"

[node name="QuitBtn" type="Button" parent="MainMenu"]
margin_top = 42.0
margin_right = 72.0
margin_bottom = 59.0
text = "quit"

[node name="SettingsMenu" type="Popup" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="SettingsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.027451, 0, 0.0509804, 1 )

[node name="Label" type="Label" parent="SettingsMenu"]
anchor_right = 1.0
margin_top = 15.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 2 )
text = "Settings"
align = 1
valign = 1

[node name="MainMenu" type="VBoxContainer" parent="SettingsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -42.5
margin_right = 140.0
margin_bottom = 42.5

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsMenu/MainMenu"]
margin_right = 280.0
margin_bottom = 17.0
alignment = 1

[node name="Button" type="Button" parent="SettingsMenu/MainMenu/HBoxContainer"]
margin_left = 32.0
margin_right = 112.0
margin_bottom = 17.0
rect_min_size = Vector2( 80, 0 )
text = "Video"

[node name="Button2" type="Button" parent="SettingsMenu/MainMenu/HBoxContainer"]
margin_left = 116.0
margin_right = 164.0
margin_bottom = 17.0
text = "Audio"

[node name="Button3" type="Button" parent="SettingsMenu/MainMenu/HBoxContainer"]
margin_left = 168.0
margin_right = 248.0
margin_bottom = 17.0
rect_min_size = Vector2( 80, 0 )
text = "Controls"

[node name="SettingsContainer" type="VBoxContainer" parent="SettingsMenu/MainMenu"]
margin_top = 21.0
margin_right = 280.0
margin_bottom = 85.0

[node name="VideoSettings" type="GridContainer" parent="SettingsMenu/MainMenu/SettingsContainer"]
margin_right = 280.0
margin_bottom = 64.0
rect_min_size = Vector2( 280, 0 )
columns = 2

[node name="Label" type="Label" parent="SettingsMenu/MainMenu/SettingsContainer/VideoSettings"]
margin_top = 13.0
margin_right = 80.0
margin_bottom = 24.0
text = "VSync"

[node name="CheckButton" type="CheckButton" parent="SettingsMenu/MainMenu/SettingsContainer/VideoSettings"]
margin_left = 84.0
margin_right = 160.0
margin_bottom = 38.0
flat = true

[node name="Label2" type="Label" parent="SettingsMenu/MainMenu/SettingsContainer/VideoSettings"]
margin_top = 47.0
margin_right = 80.0
margin_bottom = 58.0
text = "Fullscreen"

[node name="CheckBox" type="CheckBox" parent="SettingsMenu/MainMenu/SettingsContainer/VideoSettings"]
margin_left = 84.0
margin_top = 42.0
margin_right = 160.0
margin_bottom = 64.0

[node name="AudioSettings" type="GridContainer" parent="SettingsMenu/MainMenu/SettingsContainer"]
visible = false
margin_top = 68.0
margin_right = 280.0
margin_bottom = 68.0

[node name="ControlsSettings" type="GridContainer" parent="SettingsMenu/MainMenu/SettingsContainer"]
visible = false
margin_top = 4.0
margin_right = 280.0
margin_bottom = 4.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="pressed" from="MainMenu/StartBtn" to="." method="_on_StartBtn_pressed"]
[connection signal="pressed" from="MainMenu/SettingsBtn" to="." method="_on_SettingsBtn_pressed"]
[connection signal="pressed" from="MainMenu/QuitBtn" to="." method="_on_QuitBtn_pressed"]
